<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.uni.tuebingen.sfs.java2</groupId>
    <artifactId>LinguaKWIC</artifactId>
    <version>1.0</version>
    <name>LinguaKWIC</name>

    <!--   FIXME change it to the project's website (optional)  -->
    <!--    <url>http://www.example.com</url>-->

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.opennlp</groupId>
            <artifactId>opennlp-tools</artifactId>
            <version>1.9.3</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>junit</groupId>-->
<!--            <artifactId>junit</artifactId>-->
<!--            <version>4.13.1</version>-->
<!--            <scope>test</scope>-->
<!--        </dependency>-->
        <dependency>
            <groupId>org.jsoup</groupId>
            <artifactId>jsoup</artifactId>
            <version>1.17.2</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.32</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.8.1</version>
            <scope>test</scope>
        </dependency>
        <!-- for now-->
        <!--        <dependency>-->
<!--            &lt;!&ndash;  jsoup HTML parser library @ https://jsoup.org/  &ndash;&gt;-->
<!--            <groupId>org.jsoup</groupId>-->
<!--            <artifactId>jsoup</artifactId>-->
<!--            <version>1.14.1</version>-->
<!--        </dependency>-->
    </dependencies>
    <build>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <sourceDirectory>src/main/java</sourceDirectory>
        <pluginManagement>
            <!--  lock down plugins versions to avoid using Maven defaults (may be moved to parent pom)  -->
            <plugins>
                <plugin>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <configuration>
                        <!--  get all project dependencies  -->
                        <archive>
                            <manifest>
                                <mainClass>LinguaKWICGUI</mainClass>
                            </manifest>
                        </archive>
                        <descriptorRefs>
                            <descriptorRef>jar-with-dependencies</descriptorRef>
                        </descriptorRefs>
                    </configuration>
                    <executions>
                        <execution>
                            <id>make-assembly</id>
                            <!--  bind to the packaging phase  -->
                            <phase>package</phase>
                            <goals>
                                <goal>single</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>

<!--                &lt;!&ndash;  clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle  &ndash;&gt;-->
<!--                <plugin>-->
<!--                    <artifactId>maven-clean-plugin</artifactId>-->
<!--                    <version>3.1.0</version>-->
<!--                </plugin>-->
<!--                &lt;!&ndash;  default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging  &ndash;&gt;-->
<!--                <plugin>-->
<!--                    <artifactId>maven-resources-plugin</artifactId>-->
<!--                    <version>3.0.2</version>-->
<!--                </plugin>-->
<!--                <plugin>-->
<!--                    <artifactId>maven-compiler-plugin</artifactId>-->
<!--                    <version>3.8.0</version>-->
<!--                </plugin>-->
<!--                <plugin>-->
<!--                    <artifactId>maven-surefire-plugin</artifactId>-->
<!--                    <version>2.22.1</version>-->
<!--                </plugin>-->
<!--                <plugin>-->
<!--                    <artifactId>maven-jar-plugin</artifactId>-->
<!--                    <version>3.0.2</version>-->
<!--                </plugin>-->
<!--                <plugin>-->
<!--                    <artifactId>maven-install-plugin</artifactId>-->
<!--                    <version>2.5.2</version>-->
<!--                </plugin>-->
<!--                <plugin>-->
<!--                    <artifactId>maven-deploy-plugin</artifactId>-->
<!--                    <version>2.8.2</version>-->
<!--                </plugin>-->
<!--                &lt;!&ndash;  site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle  &ndash;&gt;-->
<!--                <plugin>-->
<!--                    <artifactId>maven-site-plugin</artifactId>-->
<!--                    <version>3.7.1</version>-->
<!--                </plugin>-->
<!--                <plugin>-->
<!--                    <artifactId>maven-project-info-reports-plugin</artifactId>-->
<!--                    <version>3.0.0</version>-->
<!--                </plugin>-->
            </plugins>
        </pluginManagement><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>8</source><target>8</target><compilerArgs>--enable-preview</compilerArgs></configuration></plugin></plugins>
    </build>

</project>





